--- a/css/styles.css
+++ b/css/styles.css
@@ -357,6 +357,11 @@ Hero
     z-index: 999;
 }
 
+.transparent-bar {
+    background-color: rgba(37, 43, 56, 0.85);
+    border-bottom: none;
+}
+
 .fixed {
     position: fixed;
     background-color: #232731;
@@ -368,7 +373,7 @@ Hero
     padding: 50px 0;
     border-bottom: solid 1px rgba(255, 255, 255, 0.2);
     position: relative;
-    width: 1170px;
+    width: 90%;
     margin: 0 auto;
     transition: padding 300ms ease-in-out;
 }
