--- a/css/styles.css
+++ b/css/styles.css
@@ -319,7 +319,7 @@ Hero
 ========================================================================== */
 .hero {
     min-height: 750px;
-    background: url("../img/hero.jpg") center center;
+    background: url("../../img/hero.jpg") center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -524,14 +524,14 @@ Features-stack
 .features .ipad-wrap {
     width: 706px;
     height: 1002px;
-    background: url("../img/ipad-device.png") no-repeat center center;
+    background: url("../../img/ipad-device.png") no-repeat center center;
     z-index: 1;
 }
 
 .features .iphone-wrap {
     width: 304px;
     height: 620px;
-    background: url("../img/iphone6.png") no-repeat center center;
+    background: url("../../img/iphone6.png") no-repeat center center;
     position: absolute;
     left: 530px;
     bottom: 129px;
@@ -568,7 +568,7 @@ Features-stack
     position: absolute;
     width: 916px;
     height: 540px;
-    background: url("../img/macbook-pro.png") no-repeat center center;
+    background: url("../../img/macbook-pro.png") no-repeat center center;
     top: 114px;
     z-index: 4;
     left: 50%;
@@ -592,7 +592,7 @@ Features-stack
 ========================================================================== */
 .hero-strip {
     margin-top: 120px;
-    background: #333844 url("../img/polygonal-bg.jpg") no-repeat center center;
+    background: #333844 url("../../../img/polygonal-bg.jpg") no-repeat center center;
     padding-bottom: 190px;
     position: relative;
 }
@@ -738,7 +738,7 @@ Features-stack
 .testimonial-slider
 ========================================================================== */
 .testimonial-slider {
-    background: url("../img/testimonials-bg.jpg") no-repeat center center;
+    background: url("../../img/testimonials-bg.jpg") no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -1060,8 +1060,8 @@ Icon font (http://www.elegantthemes.com/blog/freebie-of-the-week/free-line-style
 ========================================================================== */
 @font-face {
     font-family: 'et-line';
-    src: url("../fonts/et-line.eot");
-    src: url("../fonts/et-line.eot?#iefix") format("embedded-opentype"), url("../fonts/et-line.woff") format("woff"), url("../fonts/et-line.ttf") format("truetype"), url("../fonts/et-line.svg#et-line") format("svg");
+    src: url("../../fonts/et-line.eot");
+    src: url("../../fonts/et-line.eot?#iefix") format("embedded-opentype"), url("../../fonts/et-line.woff") format("woff"), url("../../fonts/et-line.ttf") format("truetype"), url("../../fonts/et-line.svg#et-line") format("svg");
     font-weight: normal;
     font-style: normal;
 }
